templates/kc-chart_template.yaml
---
# Source: kc-chart/templates/03-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: keepcoding
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# Source: kc-chart/templates/07-service-wp.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: keepcoding
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Source: kc-chart/templates/06-deploy-wp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-chart-wordpress-deployment
  namespace: keepcoding
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      affinity:
        # NO PUEDEN ESTAR EN EL MISMO NODO PODS DE WORDPRESS
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - wordpress
            topologyKey: "kubernetes.io/hostname"
        # podAffinity:
        #   TIENE QUE EXISTIR EN EL MISMO NODO POR LO MENOS UN POD DE MYSQL
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #   - labelSelector:
        #       matchExpressions:
        #       - key: app
        #         operator: In
        #         values:
        #         - mysql
        #     topologyKey: "kubernetes.io/hostname"
      containers:
      - name: wordpress-container
        image: jhoncytech/bookworm-apache-wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          limits:
            cpu: "250m"
            memory: "450Mi"
          requests:
            cpu: "50m"
            memory: "256Mi"
      volumes:
      - name: kc-chart-wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: kc-chart-wordpress-pv-claim
---
# Source: kc-chart/templates/04-stateful-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kc-chart-mysql-statefulset
  namespace: keepcoding
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      affinity:
        # NO PUEDEN ESTAR EN EL MISMO NODO PODS DE MYSQL
        # podAntiAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #   - labelSelector:
        #       matchExpressions:
        #       - key: app
        #         operator: In
        #         values:
        #         - mysql
        #     topologyKey: "kubernetes.io/hostname"
        # TIENE QUE EXISTIR EN EL MISMO NODO POR LO MENOS UN POD DE WORDPRESS
        # podAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #   - labelSelector:
        #       matchExpressions:
        #       - key: app
        #         operator: In
        #         values:
        #         - wordpress
        #     topologyKey: "kubernetes.io/hostname"
      containers:
      - name: mysql-container
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: kc-chart-mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: "250m"
            memory: "450Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
  volumeClaimTemplates:
  - metadata:
      name: kc-chart-mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ] #[ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
# Source: kc-chart/templates/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-chart-kc-ingress
  namespace: keepcoding
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: wordpress-service
      port:
        number: 80
  rules:
  - host: yotkt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      # - path: /apple
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: apple-service
      #       port:
      #         number: 5678
      # - path: /banana
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: banana-service
      #       port:
      #         number: 5678
      # - path: /pepe
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: wordpress-service
      #       port:
      #         number: 80
